--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       body {
         font-family: Arial;
         padding: 20px;
-        background: #f5f5f5;
+        background: skyblue;
       }
       h1 {
         text-align: center;
